--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,11 +18,14 @@
 
 			<h3 class="col-md-8" data-animation="dropDownAnim">Hi, Im a <i>{</i><b> fullstack web developer </b><i>}</i> and my name is</h3>
 			<h1 class="hero-title" data-animation="dropDownAnim">Andréas Blin</h1>
-			<h2 class="hero-secondary-title col-md-6 offset-md-1">❝<i>I will build the website you've been dreaming of</i> ❞</h2>
+			<h2 class="hero-secondary-title col-xl-6 offset-xl-1">❝<i>I will build the website you've been dreaming of</i> ❞</h2>
 
-			<a href="#portfolio" class="action-link portfolio-link offset-md-3" data-animation="portfolioLinkAnim">Portfolio</a>
+			<div class="call-wrapper offset-md-3 offset-sm-2 offset-xs-1">
+				<a href="#portfolio" class="action-link portfolio-link" data-animation="portfolioLinkAnim">Portfolio</a>
+				<div class="scroll-indicator" data-animation="indicatorAnim"></div>
+			</div>
+
 			<img src="/svg/undraw_freelancer.svg" class="freelancer-svg" alt="Freelance Illustration" data-animation="freelancerAnim" draggable="false" />
-			<div class="scroll-indicator" data-animation="indicatorAnim"></div>
 		</div>
 	</section>
 
@@ -30,34 +33,15 @@
 		<div class="bg-clipper">
 			<div class="slide" id="maral">
 				<div class="portfolio-item row">
-					<div class="portfolio-thumbnail-wrapper col-lg-5 p-0">
-						<!--	<a href="https://www.maral.fr" target="_blank"><img class="w-100" src="/img/maral_thumbnail.jpg" alt="Maral.fr Screenshot" draggable="false" /></a>-->
-						<!--<div class="phone-wrapper phone-black">
-							<div class="phone-small-round-top"></div>
-							<div class="phone-round-top-left"></div>
-							<div class="phone-speaker"></div>
-							<a href="https://www.maral.fr" target="_blank"><img src="/img/maral_thumbnail2.png" draggable="false" class="phone-screenshot" /></a>
-							<a href="https://www.maral.fr" target="_blank"><div class="phone-button"></div></a>
-						</div>-->
-						<a href="https://www.maral.fr" target="_blank" data-animation="iphoneAnim"><img src="/img/iphone7.png" draggable="false" class="iphone-class" /></a>
-						<div class="skills-used-small">
-							<ul>
-								<li>NodeJS</li>
-								<li>API</li>
-								<li>Pwinty</li>
-								<li>Stripe</li>
-								<li>Bootstrap</li>
-							</ul>
-							<div class="skill-call-wrapper">
-								<a href="#skills" class="action-link m-auto">Skills</a>
-							</div>
-						</div>
+					<div class="portfolio-thumbnail-wrapper p-0">
+						<a href="https://www.maral.fr" target="_blank" class="iphoneAnim iphoneVert"><img src="/img/iphone7.png" draggable="false" class="iphone-class" /></a>
+						<a href="https://www.maral.fr" target="_blank" class="iphoneSide"><img src="/img/iphone7side.png" draggable="false" class="iphone-class" /></a>
 					</div>
 
-					<div class="portfolio-info col-lg-4 offset-lg-1">
+					<div class="portfolio-info">
 						<h1 class="hero-title mt-4 mb-0 col-12" data-animation="dropDownAnim"><a href="https://www.maral.fr" target="_blank">Maral.fr</a></h1>
 
-						<p class="pt-5">
+						<p>
 							An <b>e-commerce</b> website allowing customers to purchase paintings or replicas of these paintings using <b><a href="https://pwinty.com/" target="_blank">Pwinty API</a></b> to
 							automatically handle replicas orders. Clients can pay for their orders by card using the <b><a href="https://stripe.com/" target="_blank">Stripe API</a></b
 							>.
@@ -85,11 +69,13 @@
 			</div>
 
 			<div class="slide">
-				<h1 class="hero-title mt-4 mb-0"><a href="#" target="_blank">Some project</a></h1>
+				<h1 class="hero-title mt-4 mb-0"><a href="#" target="_blank">Covid Tracker</a></h1>
+				<h2>Coming soon...</h2>
 			</div>
 
 			<div class="slide">
-				<h1 class="hero-title mt-4 mb-0"><a href="#" target="_blank">Some other project</a></h1>
+				<h1 class="hero-title mt-4 mb-0"><a href="#" target="_blank">Url Shortener App</a></h1>
+				<h2>Coming soon...</h2>
 			</div>
 		</div>
 	</section>
