made brackets stick to text

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,9 +16,11 @@
 				</ul>
 			</nav>
 
-			<h3 class="col-md-8" data-animation="dropDownAnim">Hi, Im a <i>{</i><b> fullstack web developer </b><i>}</i> and my name is</h3>
+			<h3 class="col-md-8" data-animation="dropDownAnim">
+				Hi, Im a <b> <i>{</i>fullstack web developer<i>}</i> </b> and my name is
+			</h3>
 			<h1 class="hero-title" data-animation="dropDownAnim">Andréas Blin</h1>
-			<h2 class="hero-secondary-title col-xl-6 offset-xl-1">❝<i>I will build the website you've been dreaming of</i> ❞</h2>
+			<h2 class="hero-secondary-title col-xl-6 offset-xl-1"><i>❝I will build the website you've been dreaming of❞</i></h2>
 
 			<div class="call-wrapper offset-md-3 offset-sm-2 offset-xs-1">
 				<a href="#portfolio" class="action-link portfolio-link" data-animation="portfolioLinkAnim">Portfolio</a>
