--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,8 +1,8 @@
 <%- include('partials/head'); -%>
 
 <div id="fullPage">
-	<section class="section main-section hero" id="landing-section" data-anchor="landing">
-		<div class="bg-clipper" data-animation="bgAnim">
+	<section class="section main-section hero fp-auto-height-responsive" id="landing-section" data-anchor="landing">
+		<div class="bg-clipper">
 			<nav class="navbar navbar-dark pt-4">
 				<a class="navbar-brand" href="#">ablin@dev</a>
 
@@ -31,7 +31,7 @@
 		</div>
 	</section>
 
-	<section class="section main-section even" id="portfolio-section" data-anchor="portfolio">
+	<section class="section main-section even fp-auto-height-responsive" id="portfolio-section" data-anchor="portfolio">
 		<div class="bg-clipper">
 			<div class="slide" id="maral">
 				<div class="portfolio-item row">
@@ -82,7 +82,7 @@
 		</div>
 	</section>
 
-	<section class="section main-section" id="skills-section" data-anchor="skills">
+	<section class="section main-section fp-auto-height-responsive" id="skills-section" data-anchor="skills">
 		<div class="bg-clipper">
 			<h1 class="hero-title mt-2 mb-0" data-animation="dropDownAnim">Skills</h1>
 
@@ -207,7 +207,7 @@
 		</div>
 	</section>
 
-	<section class="section main-section even" id="contact-section" data-anchor="contact">
+	<section class="section main-section even fp-auto-height-responsive" id="contact-section" data-anchor="contact">
 		<div class="bg-clipper">
 			<h1 class="hero-title mt-2" data-animation="dropDownAnim">Contact</h1>
 
@@ -252,6 +252,4 @@
 </div>
 
 <script src="/scripts/fullpageConfig.js"></script>
-<script src="/scripts/submit_contact.js"></script>
-<script src="/scripts/icon_hover.js"></script>
 <%- include('partials/footer'); -%>
