--- a/public/main.scss
+++ b/public/main.scss
@@ -5,11 +5,17 @@ $colors: (
 	//#0c0c0c,
 	dark-shade-light: lighten(#151515, 7.5%),
 	dark-shade-lighter: lighten(#151515, 12%),
-	main: #751fff,
-	//#f34023,
-	main-light: lighten(#751fff, 10%),
-	main-dark: darken(#751fff, 10%),
+	main: #ec5454,
+	//#ec5454(pale red),
+	//#f44336(orange),
+	//#ff3939(red),
+	//#3dd86d(green ++),
+	//#751fff(purple),
+	//#f34023(purple),
+	main-light: lighten(#ec5454, 10%),
+	main-dark: darken(#ec5454, 10%),
 	maral: #233bde,
+	maral-light: lighten(#233bde, 10%),
 	maral-dark: darken(#233bde, 10%)
 );
 
@@ -208,7 +214,7 @@ body {
 	border: none !important;
 	//	background-size: 250px;
 	//	background-repeat: repeat;
-	background-image: linear-gradient(90deg, color(main), color(main-light));
+	background-image: linear-gradient(90deg, color(main), color(main-dark));
 	color: #f1f1f1 !important;
 	outline: none;
 	cursor: pointer;
@@ -240,7 +246,7 @@ body {
 	display: block;
 	padding: 10px 0;
 	border: none !important;
-	background: linear-gradient(90deg, color(main), color(main-light));
+	background: linear-gradient(90deg, color(main), color(main-dark));
 	color: color(light-shade) !important;
 	outline: none;
 	cursor: pointer;
@@ -803,10 +809,10 @@ select:-webkit-autofill {
 		}
 
 		.action-link {
-			background-image: linear-gradient(90deg, color(maral-dark), color(maral)) !important;
+			background-image: linear-gradient(90deg, color(maral-light), color(maral)) !important;
 
 			&:before {
-				background-image: linear-gradient(270deg, color(maral-dark), color(maral)) !important;
+				background-image: linear-gradient(270deg, color(maral-light), color(maral)) !important;
 			}
 		}
 	}
