--- a/views/index.ejs
+++ b/views/index.ejs
@@ -252,4 +252,6 @@
 </div>
 
 <script src="/scripts/fullpageConfig.js"></script>
+<script src="/scripts/icon_hover.js"></script>
+<script src="/scripts/submit_contact.js"></script>
 <%- include('partials/footer'); -%>
