--- a/public/main.css
+++ b/public/main.css
@@ -493,7 +493,11 @@ select:-webkit-autofill {
 .hero-title {
   /*font-weight: bold;*/
   font-family: "Noir" !important;
-  color: #ec5454;
+  background: linear-gradient(145deg, #ec5454, #ef6b6b);
+  background: -webkit-gradient(145deg, #ec5454, #ef6b6b);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  padding-right: 10px;
   margin-left: 10%;
   margin-top: -35px;
   font-style: italic;
@@ -527,7 +531,7 @@ select:-webkit-autofill {
 
 .hero-secondary-title {
   color: #000000 !important;
-  opacity: 0.6;
+  opacity: 0.85;
   margin-top: 4.5rem;
   line-height: 3.5vw;
   line-height: clamp(35px, 4vw, 60px);
@@ -557,7 +561,7 @@ select:-webkit-autofill {
 
 #skills-section .bg-clipper {
   height: 102%;
-  background-color: #151515;
+  background: url("./bg/cartographer.png");
   -webkit-clip-path: polygon(0 0, 100% 0, 100% 98%, 75% 95%, 22% 93%, 0 90%);
           clip-path: polygon(0 0, 100% 0, 100% 98%, 75% 95%, 22% 93%, 0 90%);
 }
@@ -644,12 +648,12 @@ select:-webkit-autofill {
 }
 
 #landing-section {
-  background-color: #f1f1f1;
+  background: url("./bg/topography.png");
 }
 
 #landing-section .bg-clipper {
   height: 100%;
-  background-color: #151515;
+  background: url("./bg/cartographer.png");
   -webkit-clip-path: polygon(0px 0px, 100% 0px, 100% 98%, 89% 95%, 31% 85%, 0px 78%);
           clip-path: polygon(0px 0px, 100% 0px, 100% 98%, 89% 95%, 31% 85%, 0px 78%);
 }
@@ -665,6 +669,7 @@ select:-webkit-autofill {
           clip-path: polygon(0 0, 100% 0, 100% 87%, 86% 98%, 19% 98%, 0 86%);
   background: -webkit-gradient(linear, left top, left bottom, color-stop(88%, #f1f1f1), color-stop(12%, #151515));
   background: linear-gradient(to bottom, #f1f1f1 88%, #151515 12%);
+  background: url("./bg/topography.png");
 }
 
 #contact-section #contact-form {
@@ -724,8 +729,7 @@ select:-webkit-autofill {
 }
 
 #portfolio-section {
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(50%, #f1f1f1), color-stop(50%, #151515));
-  background: linear-gradient(to bottom, #f1f1f1 50%, #151515 50%);
+  background: url("./bg/cartographer.png");
 }
 
 #portfolio-section h1 {
@@ -740,7 +744,7 @@ select:-webkit-autofill {
 }
 
 #portfolio-section .bg-clipper {
-  background-color: #f1f1f1;
+  background: url("./bg/topography.png");
   -webkit-clip-path: polygon(0 0, 100% 0, 100% 73%, 71% 77%, 29% 79%, 0 81%);
           clip-path: polygon(0 0, 100% 0, 100% 73%, 71% 77%, 29% 79%, 0 81%);
   height: 118%;
@@ -874,8 +878,13 @@ select:-webkit-autofill {
   margin-top: 1rem;
 }
 
-#portfolio-section #maral h1,
-#portfolio-section #maral h1 a,
+#portfolio-section #maral h1 {
+  background: linear-gradient(145deg, #233bde, #4f63e5);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  padding-right: 10px;
+}
+
 #portfolio-section #maral b a,
 #portfolio-section #maral b,
 #portfolio-section #maral a {
