fixed brackets skills section color

--- a/public/main.scss
+++ b/public/main.scss
@@ -606,7 +606,7 @@ select:-webkit-autofill {
 
 		h1 {
 			font-size: 75px;
-			color: color(dark-shade-light);
+			color: color(dark-shade);
 		}
 
 		.wrapper-icon {
