--- a/views/index.ejs
+++ b/views/index.ejs
@@ -70,14 +70,52 @@
 				</div>
 			</div>
 
-			<div class="slide">
-				<h1 class="hero-title mt-4 mb-0"><a href="#" target="_blank">Covid Tracker</a></h1>
-				<h2>Coming soon...</h2>
+			<div class="slide" id="xs-url">
+				<div class="portfolio-item row">
+					<div class="portfolio-thumbnail-wrapper p-0">
+						<a href="http://www.xs-url.fr" target="_blank" class="iphoneAnim iphoneVert"><img src="/img/iphone7url.png" draggable="false" class="iphone-class" /></a>
+						<a href="http://www.xs-url.fr" target="_blank" class="iphoneSide"><img src="/img/iphone7urlside.png" draggable="false" class="iphone-class" /></a>
+					</div>
+
+					<div class="portfolio-info">
+						<h1 class="hero-title mt-4 mb-0 col-12" data-animation="dropDownAnim"><a href="http://www.xs-url.fr" target="_blank">xs-url.fr</a></h1>
+
+						<p>A straightforward and easy to use <b>URL shortener</b> service allowing users to redirect to an URL while <b>spoofing</b> its original <b>URL</b>.</p>
+						<p>
+							For this small scale project I did not use any CSS templating service, only <b>custom CSS</b>. Regarding the back-end, I used <b>NodeJS</b> to create an <b>API</b> to generate shorter
+							URLs and access them easily.
+						</p>
+						<p>For your eye's sake I implemented both a <b>light-mode</b> and a <b>dark-mode</b> that you can toggle whenever you like it best!</p>
+
+						<div class="skills-used-large">
+							<ul>
+								<li>NodeJS</li>
+								<li>API</li>
+								<li>Custom CSS</li>
+								<li>Javascript</li>
+							</ul>
+							<div class="skill-call-wrapper">
+								<a href="#skills" class="action-link m-auto">Skills</a>
+							</div>
+						</div>
+					</div>
+				</div>
 			</div>
 
 			<div class="slide">
-				<h1 class="hero-title mt-4 mb-0"><a href="#" target="_blank">Url Shortener App</a></h1>
-				<h2>Coming soon...</h2>
+				<div class="portfolio-item row">
+					<div class="portfolio-thumbnail-wrapper p-0">
+						<!--	<a href="http://www.xs-url.fr" target="_blank" class="iphoneAnim iphoneVert"><img src="/img/iphone7url.png" draggable="false" class="iphone-class" /></a>
+						<a href="http://www.xs-url.fr" target="_blank" class="iphoneSide"><img src="/img/iphone7urlside.png" draggable="false" class="iphone-class" /></a>-->
+					</div>
+
+					<div class="portfolio-info">
+						<h1 class="hero-title mt-4 mb-0 col-12" data-animation="dropDownAnim"><a href="http://www.xs-url.fr" target="_blank">Covid Tracker</a></h1>
+						<h2 class="text-center">Coming soon...</h2>
+
+						<div class="skills-used-large"></div>
+					</div>
+				</div>
 			</div>
 		</div>
 	</section>
